styles/MenuState.css
.menu-scroll_container {
    position: fixed;
    top: 0;
    left: 0;
    width: 100%;
    height: 100vh;
    overflow-y: scroll;
    scroll-snap-type: y mandatory;
    scroll-behavior: smooth;
}

.menu-scroll_container::-webkit-scrollbar {
    display: none;
}

.menu-background-gradient {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 500vh;
    background: linear-gradient(180deg, 
      #4287f5 0%, 
      #73a9ff 15%, 
      #8a9cba 40%, 
      #d6b767 65%, 
      #fffd96 90%);
    z-index: 0;
}

.menu-island_container {
    position: absolute;
    top: 0;
    left: 45em;
    width: 100%;
    height: 100%;

    display: flex;
    flex-direction: column;
    justify-content: center;
    z-index: 2;
    pointer-events: none;
}

@keyframes bob {
    0%, 100% { transform: translateY(0); }
    50% { transform: translateY(10px); }
}

.component-sidebar,
.component-navigation_bar,
.freeze {
    z-index: 100 !important;
}

